# protobuf-web-server

./: BigData.proto  Cargo.toml  README.md
big-data/: Cargo.toml  build.rs
big-data/src/: big-data.proto
client/: Cargo.toml
client/src/: main.rs
protobuf/: Cargo.toml  build.rs
protobuf/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
