[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
big-data = {path = "../big-data"}
prost = "0.12.0"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
reqwest = "0.11.20"
tokio = {version = "1", features = ["full"]}
