[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = {version = "0.7.7", features = ["protobuf"]}
hyper = {version = "0.14.27", features = ["full"]}
tokio = {version = "1.32.0", features = ["full"]}
tower = "0.4.13"
tower-http = "0.4.4"
